--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,5 @@ Simulation/.vs/
 .vs/
 Simulation/obj/
 Simulation/bin/
-packages/
-Game.Tests/obj/
-Game.Tests/bin/
+Simulation.Tests/obj/
+Simulation.Tests/bin/
